--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,16 @@ header div {
   background-image: url(../images/banner.jpg);
 }
 
+header div button {
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  border-color: #f04c2f;
+  font-style: bold;
+  font-size: large;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 div p {
   line-height: 1.62rem;
   padding: 20px;
@@ -84,8 +94,21 @@ h4 {
 
 footer {
   background-color: #25a2c3;
+  margin-top: 30px;
 }
 
 img {
   width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+section#bordi {
+  padding: 20px;
+  border: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border-color: #dee1e3;
 }
