--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ header img {
 
 header div {
   background-image: url(../images/banner.jpg);
+  background-position: center;
+  background-size: 100%;
 }
 
 header div button {
@@ -67,6 +69,10 @@ footer h2 {
   color: white;
 }
 
+footer dl dd,
+a {
+  color: white;
+}
 h4 {
   color: #25a2c3;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -104,7 +110,7 @@ img {
   margin-bottom: 20px;
 }
 
-section#bordi {
+article section .bordi {
   padding: 20px;
   border: 2px;
   margin-top: 10px;
