--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,20 +26,24 @@ header div {
 }
 
 header div button {
-  padding: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   border-radius: 5px;
   color: white;
   border-color: #f04c2f;
-  font-style: bold;
-  font-size: large;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 30px;
 }
 
-div p {
+header div p {
   line-height: 1.62rem;
   padding: 20px;
   font-size: 1em;
   letter-spacing: 1px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 div p span {
@@ -57,8 +61,8 @@ body {
 
 h2 {
   color: #25a2c3;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 2em;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   letter-spacing: 1.5px;
   padding: 24px;
@@ -66,6 +70,7 @@ h2 {
 }
 
 footer h2 {
+  font-family: "Montserrat", sans-serif;
   color: white;
 }
 
@@ -75,8 +80,8 @@ a {
 }
 h4 {
   color: #25a2c3;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1em;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   letter-spacing: 1.5px;
   padding: 20px;
